created a new branch and wrote the basic code for the layout of the page

--- a/index.html
+++ b/index.html
@@ -4,8 +4,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header class="header" id="header">
+        <nav class="nav" id="nav">
+            <ul class="unordered-list" id="unordered-list">
+                <li><a>Home</a></li>
+                <li><a>Products</a></li>
+                <li><a>Services</a></li>
+                <li><a>About</a></li>
+                <li><a>Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <div class="gallery" id="gallery">
+        <h1>Welcome to the best website ever</h1>
+        <section class="pictures" id="pictures">
+            <h2>These are the best of the products we offer</h2>
+            <div class="photos" id="photos">
+                <img src="" alt="">
+                <img src="" alt="">
+                <img src="" alt="">
+            </div>
+        </section>
+        <section class="videos" id="videos">
+            <h2>Feed your eyes with some of our top trending videos</h2>
+            <div class="images" id="images">
+                <video src=""></video>
+                <video src=""></video>
+                <video src=""></video>
+            </div>
+        </section>
+    </div>
+    <div class="footer" id="footer">
+        <footer>
+            <p>copyright</p>
+            <h3>contact us on</h3>
+        </footer>
+    </div>
 </body>
 </html>
