created another page for the website to display more images

--- a/index.html
+++ b/index.html
@@ -6,6 +6,30 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="main" id="main">
+        <h1>More beautiful images from our photographers on the field</h1>
+        <p></p>
+        <div class="pictures" id="pictures">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+        </div>
+
+        <div class="videos" id="videos">
+            <h2>See how to use the product in the videos below</h2>
+            <p></p>
+        </div>
+        <div class="images" id="images">
+            <video src=""></video>
+            <video src=""></video>
+            <video src=""></video>
+        </div>
+        <div class="footer" id="footer">
+            <footer>
+                <p></p>
+                <h3></h3>
+            </footer>
+        </div>
+    </div>
 </body>
 </html>
