--- a/index.html
+++ b/index.html
@@ -57,5 +57,11 @@
         </div>
         </div>
     </div>
+    <div class="footer" id="footer">
+        <footer>
+            <p></p>
+            <h4></h4>
+        </footer>
+    </div>
 </body>
 </html>
